# ConwayGoL

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  index.html  make-graph.sh  params.json
@licenses/: conway.txt  inih.txt
ConwayApp/include/: board.h  cell.h  game.h
ConwayApp/source/: cell.cpp
Patterns/: glider.lif
Tests/: BoardTests.cpp  CMakeLists.txt  CellTests.cpp
gtest/: BoardTest.cpp  CellTest.cpp
include/: Board.hpp  Cell.hpp  Game.hpp  GameSettings.h  Settings.h  board.h  cell.h  game.h
include/gtest/: gtest.h
inih/: CMakeLists.txt
inih/lib/: CMakeLists.txt
patterns/: achimsp144.lif  test.lif
source/: Board.cpp  Cell.cpp  Game.cpp  GameSettings.cpp  Settings.cpp  board.cpp  cell.cpp  game.cpp  inireader.cpp  main.cpp
test/: BoardTest.cpp  CellTest.cpp  gtest_all.cpp
